# vine_tomato_grasping

./: .gitignore  README.md
detect_crop/: CMakeLists.txt  package.xml  setup.py
detect_truss/: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
flex_calibrate/: CMakeLists.txt  package.xml
flex_gazebo/: CMakeLists.txt  package.xml  setup.py
flex_gazebo/config/: iiwa_control.yaml
flex_gazebo/launch/: camera_upload.launch  camera_world.launch  flex_gazebo.launch  flex_world.launch  upload.launch  upload_rs.launch
flex_gazebo/media/materials/scripts/: custom.material  marker.material  surface.material
flex_gazebo/models/2d_truss/: model.sdf
flex_gazebo/models/3d_truss/: model.sdf
flex_gazebo/models/marker26_8cm/: marker26_8cm.sdf
flex_gazebo/models/pedicel/: model.config  model.sdf
flex_gazebo/models/table_short/: model.sdf
flex_gazebo/models/tomato/: model.sdf
flex_gazebo/scripts/: generate_random_angle.py
flex_gazebo/src/: generate_material.py  spawn_truss.py
flex_gazebo/src/gazebo_interface/: gazebo_interface.py  gazebo_interface_node.py
flex_gazebo/src/gazebo_interface/state_machine/: gazebo_interface_state_machine.py  state_machine_input.py
flex_gazebo/src/spawn_truss/: spawn_truss.py  spawn_truss_node.py
flex_gazebo/src/spawn_truss/state_machine/: model_spawner_state_machine.py  state_machine_input.py
flex_gazebo/urdf/: camera.urdf.xacro  gripper.gazebo.xacro  gripper.urdf.xacro  iiwa7.urdf.xacro  iiwa_tool.urdf.xacro  materials.xacro  px150.xacro  robot.urdf.xacro  robot_gripper.urdf.xacro  robot_old.urdf.xacro  robot_sdh.urdf.xacro  rs.urdf.xacro  tomato.xacro  world.urdf.xacro
flex_gazebo/urdf/camera/: camera.gazebo.xacro
flex_gazebo/urdf/dots/3d/: dots.xacro
flex_gazebo/urdf/marker/: marker.xacro
flex_gazebo/urdf/pr2/: gripper.urdf.xacro
flex_gazebo/urdf/tomato/2d/: tomato.gazebo.xacro  tomato.xacro
flex_gazebo/urdf/tomato/3d/: peduncle.xacro  tomato.gazebo.xacro  tomato.xacro  truss.xacro
flex_gazebo/urdf/truss/2d/: truss.xacro
flex_gazebo/urdf/truss/3d/: peduncle.gazebo.xacro  peduncle.xacro  tomato.xacro  truss.xacro
flex_gazebo/worlds/: camera.world  default.world  empty.world  iiwa.world  marker.world
flex_gazebo_iiwa/: CMakeLists.txt  package.xml
flex_gazebo_interbotix/: CMakeLists.txt  README.md  package.xml
flex_grasp/: CMakeLists.txt  README.md  package.xml  setup.py
flex_grasp/config/: px150_pid.yaml
flex_grasp/doc/: motor calibration  pid tuneing
flex_grasp/launch/: calibrate.launch  control.launch  enviroment.launch  iiwa.launch  iiwa_control.launch  iiwa_enviroment.launch  interbotix.launch  interbotix_control.launch  interbotix_enviroment.launch  move_gripper.launch  sub.launch  test_pid.launch
flex_grasp/launch/Hmm, is this useful?/: go_to_pose_goal.launch  iiwa_command_moveit.launch
flex_grasp/launch/calibration/: aruco.launch
flex_grasp/models/tomato/: model.config
flex_grasp/models/tomato/materials/scripts/: custom.material
flex_grasp/msg/: DynamixelErrorCodes.msg  FlexGraspCommandCodes.msg  FlexGraspErrorCodes.msg  ImageProcessingSettings.msg  MoveRobotResult.msg  Peduncle.msg  PickPlaceResult.msg  Tomato.msg  TomatoArray.msg  Truss.msg  error_cases
flex_grasp/src/: analyze_point_cloud.py  calibrate.py  camera_tf_broadcaster.py  communication.py  monitor_robot.py  move_gripper.py  move_robot.py  object_detection.py  pick_place.py  pipe_line.py  pipeline.py  point.py  pose_transform.py  smach_pipeline.py  tracking_simulator.py  transform_pose.py  visualize_object.py
flex_grasp/src/Not really useful/: cartesian_path.py  move_group_python.py  test
flex_grasp/src/enum_class/: RobotState.py
flex_grasp/src/func/: conversions.py  dynamixel_error.py  flex_grasp_error.py  move_robot_result.py  orientation_to_list.py  pick_place.py  pick_place_result.py  ros_utils.py  utils.py
flex_grasp/src/move_robot/: move_robot.py
flex_grasp/src/object_detection/: depth_interface.py  object_detection.py  object_detection_input.py  object_detection_node.py
flex_grasp/src/object_detection/state_machine/: data_logger.py  object_detection_state_machine.py  state_machine_input.py
flex_grasp/src/pick_place/: pick_place.py  pick_place_node.py
flex_grasp/src/pick_place/state_machine/: pick_place_state_machine.py
flex_grasp/src/pipeline/: pipeline.py
flex_grasp/src/transform_pose/: misc.py  transform_pose.py  transform_pose_node.py
flex_grasp/src/transform_pose/state_machine/: state_machine_input.py  transform_pose_state_machine.py
flex_grasp/src/utils/: analyze_point_cloud.py  communication.py  make_rgbd_image.py
flex_gripper_moveit/: .setup_assistant  CMakeLists.txt  package.xml
flex_interbotix_moveit/: package.xml
flex_point/: CMakeLists.txt  package.xml
flex_pr2_moveit/: .setup_assistant  CMakeLists.txt  package.xml
flex_sdh_moveit/: .setup_assistant  CMakeLists.txt  package.xml
flex_shared_resources/: CMakeLists.txt  package.xml  (+1 more)
iiwa_grasp/: .gitignore  CMakeLists.txt  package.xml
iiwa_grasp/launch/: aruco.launch  env_iiwa.launch  env_panda.launch  main.launch  move_group_python.launch  moveit_planning_execution.launch  publish_calibration.launch  rviz_iiwa.launch  sub.launch  test.launch  world.launch
iiwa_grasp/models/table_short/: model-1_2.sdf  model.sdf
iiwa_grasp/models/tomato/: model.sdf
iiwa_grasp/src/: RobotError.py  command_robot_moveit.cpp  env_robot.py  go_to_pose_goal.py  makeRGBDimage.py  move_robot.py  object_detection.py  pipe_line.py  pose_transform.py  state_machine.py  state_machine_example.py
iiwa_grasp/src/Not really useful/: detectCrop.py  go_to_pose_goal.py  pose_transform_old.py
iiwa_grasp/src/enum/: Robot.py
iiwa_grasp/src/enum_class/: __init__.py
iiwa_grasp/src/func/: __init__.py  all_close.py  image_processing.py  moveit_error_string.py
iiwa_grasp/worlds/: iiwa.scene  iiwa.world  table.world
(+282 files in other folders)
