<?xml version="1.0"?>
<package format="2">
  <name>flex_gazebo</name>
  <version>0.0.0</version>
  <description>The flex_gazebo package</description>


  <maintainer email="taeke@todo.todo">taeke</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- required for loading gazebo models from this package-->
    <gazebo_ros
      gazebo_model_path="${prefix}/models"
      gazebo_media_path="${prefix}"
      />
  </export>
  <!-- :~/catkin_ws/src/flexcraft_jelle/flex_gazebo -->

</package>
