<package>
  <name>flex_grasp</name>
  <version>0.0.0</version>
  <description>The flex_grasp package</description>
  <author email="jdluijkx@gmail.com">Jelle Luijkx</author>
  <maintainer email="jdluijkx@gmail.com">Jelle Luijkx</maintainer>

  <license>BSD</license>

	
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  
  <run_depend>gazebo_ros</run_depend>

  <!-- For custom messages -->

  <run_depend>message_runtime</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
