<package>
  <name>flex_grasp</name>
  <version>0.0.0</version>
  <description>A ROS packages for manipulating vine tomato.</description>
  <author email="taeke.dehaan@live.nl">Taeke de Haan</author>
  <maintainer email="taeke.dehaan@live.nl">Taeke de Haan</maintainer>

  <license>BSD</license>

	
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>aruco_ros</run_depend>

  <!-- python dependencies-->
  <run_depend>python-numpy</run_depend>
  <run_depend>python-pyrealsense2-pip</run_depend>
  <run_depend>python-sklearn</run_depend>
  <run_depend>python-skimage</run_depend>


  <run_depend>gazebo_ros</run_depend>
  <!-- For custom messages -->

  <run_depend>message_runtime</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
