<package>
  <name>iiwa_grasp</name>
  <version>0.0.0</version>
  <description>The iiwa_grasp package</description>
  <author email="jdluijkx@gmail.com">Jelle Luijkx</author>
  <maintainer email="jdluijkx@gmail.com">Jelle Luijkx</maintainer>

  <license>BSD</license>

  <run_depend>iiwa_description</run_depend>
  <run_depend>iiwa_moveit</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>rospy</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
  
</package>
